--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "electron-updater": "^6.3.9",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.19",
+    "react-dropzone": "^14.3.8",
     "react-element-to-jsx-string": "^17.0.1",
     "react-router-dom": "^7.9.1",
     "simplex-noise": "^4.0.3",
