--- a/components.json
+++ b/components.json
@@ -17,5 +17,8 @@
       "lib": "@/renderer/src/lib",
       "hooks": "@/renderer/src/hooks"
     },
-    "iconLibrary": "lucide"
+    "iconLibrary": "lucide",
+    "registries": {
+      "@cult-ui": "https://cult-ui.com/r/{name}.json"
+    }
   }
