--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "electron-updater": "^6.3.9",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.19",
+    "ogl": "^1.0.11",
     "react-dropzone": "^14.3.8",
     "react-element-to-jsx-string": "^17.0.1",
     "react-router-dom": "^7.9.1",
