--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dropzone": "^14.3.8",
     "react-element-to-jsx-string": "^17.0.1",
     "react-router-dom": "^7.9.1",
+    "react-syntax-highlighter": "^15.6.6",
     "react-use-measure": "^2.1.7",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1",
