--- a/package.json
+++ b/package.json
@@ -32,12 +32,21 @@
     "@tsparticles/slim": "^3.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "corestore": "^7.4.7",
+    "downloads-folder": "^3.0.3",
     "electron-updater": "^6.3.9",
     "gsap": "^3.13.0",
+    "hyperbee": "^2.26.5",
+    "hypercore": "^11.16.2",
+    "hypercore-id-encoding": "^1.3.0",
+    "hyperdrive": "^13.0.1",
+    "hyperswarm": "^4.14.0",
+    "localdrive": "^2.2.0",
     "lucide-react": "^0.544.0",
     "mathjs": "^14.7.0",
     "motion": "^12.23.19",
     "ogl": "^1.0.11",
+    "protomux-rpc": "^1.7.1",
     "react-dropzone": "^14.3.8",
     "react-element-to-jsx-string": "^17.0.1",
     "react-router-dom": "^7.9.1",
