--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "protomux-rpc": "^1.7.1",
     "react-dropzone": "^14.3.8",
     "react-element-to-jsx-string": "^17.0.1",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.9.1",
     "react-syntax-highlighter": "^15.6.6",
     "react-use-measure": "^2.1.7",
