--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "teleport",
-  "version": "1.0.0",
+  "name": "hyperteleporter",
+  "version": "0.0.1",
   "description": "An Electron application with React and TypeScript",
   "main": "./out/main/index.js",
   "author": "example.com",
-  "homepage": "https://electron-vite.org",
+  "homepage": "https://github.com/executionreverted/hyperteleporter",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/executionreverted/hyperteleporter.git"
+  },
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --cache .",
@@ -18,7 +22,12 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "electron-vite build && electron-builder --mac",
-    "build:linux": "electron-vite build && electron-builder --linux"
+    "build:linux": "electron-vite build && electron-builder --linux",
+    "release": "npm run build && electron-builder --publish=always",
+    "release:win": "npm run build && electron-builder --win --publish=always",
+    "release:mac": "npm run build && electron-builder --mac --publish=always",
+    "release:linux": "npm run build && electron-builder --linux --publish=always",
+    "release:github": "node scripts/release.js"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
