--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -1,11 +1,21 @@
 {
+  "extends": "@electron-toolkit/tsconfig/tsconfig.json",
   "compilerOptions": {
     "composite": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/renderer/src/*"],
-      "@renderer/*": ["./src/renderer/src/*"]
-    }
+      "@renderer/*": ["./src/renderer/src/*"],
+      "@/components/ui/*": ["./src/components/ui/*"],
+      "@/renderer/lib/*": ["./src/renderer/lib/*"]
+    },
+    "skipLibCheck": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "strict": false,
+    "noImplicitAny": false,
+    "noImplicitReturns": false
+    
   }
 }
