--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,12 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+      - name: Install Linux deps
+        if: runner.os == 'Linux'
+        run: sudo apt-get update && sudo apt-get install -y fakeroot rpm dpkg dpkg-dev libarchive-tools
+      - name: Fix app-builder permissions
+        if: runner.os == 'Linux'
+        run: chmod +x node_modules/app-builder-bin/linux/x64/app-builder || true
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
         with:
