--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "hyperteleporter",
   "version": "0.0.2",
-  "description": "An Electron application with React and TypeScript",
+  "description": "A modern and decentralized P2P file sharing application powered by Hyperdrive. Create, share, and access files across devices without centralized servers.",
   "main": "./out/main/index.js",
-  "author": "example.com",
+  "author": "Caner Sevince",
   "homepage": "https://github.com/executionreverted/hyperteleporter",
   "repository": {
     "type": "git",
