--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "hyperdrive": "^13.0.1",
     "hyperswarm": "^4.14.0",
     "localdrive": "^2.2.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
     "mathjs": "^14.7.0",
     "motion": "^12.23.19",
@@ -59,6 +60,7 @@
     "protomux-rpc": "^1.7.1",
     "react-dropzone": "^14.3.8",
     "react-element-to-jsx-string": "^17.0.1",
+    "react-lottie": "^1.2.10",
     "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.9.1",
     "react-syntax-highlighter": "^15.6.6",
@@ -75,6 +77,7 @@
     "@types/node": "^22.18.6",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@types/react-lottie": "^1.2.10",
     "@vitejs/plugin-react": "^5.0.3",
     "autoprefixer": "^10.4.21",
     "electron": "^38.1.2",
